# to_do_django_factory

./: .flake8  README.md  manage.py  pyproject.toml  pytest.ini
.github/workflows/: code-quality.yml
to_do_django_factory/: asgi.py  settings.py  urls.py  wsgi.py
to_do_item/: apps.py  models.py  serializers.py  urls.py  views.py
to_do_item/migrations/: 0001_initial.py  0002_todoitem_reporter.py
to_do_item/tests/: test_views.py
to_do_item/tests/factories/: reporter_factory.py  to_do_factory.py
